--- a/estilos.css
+++ b/estilos.css
@@ -12,15 +12,18 @@ header{
 }
 nav{
 	margin: 50px;
+    align-items: center;
+    max-width: 1200px;
+    padding: 0 1em;
 }
 nav ul li{
+    color: aliceblue;
+    text-decoration: none;
 	display: inline;
 	margin-right: 50px;
-
 }
 nav ul li:hover{
 	color: chocolate;
-
 }
 nav ul{
 	list-style-type: none;
@@ -37,4 +40,7 @@ footer{
 	color: white;
 	text-align: center;
 	padding: 1em;
+}
+section{
+    padding: ;
 }
