--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,10 @@ header{
 	color: white;
 	text-align: center;
 	padding: 1em;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    position: fixed;
 }
 nav{
 	margin: 50px;
