--- a/estilos.css
+++ b/estilos.css
@@ -19,6 +19,7 @@ nav{
     align-items: center;
     max-width: 1200px;
     padding: 0 1em;
+    justify-content: space-between;
 }
 nav ul li{
     color: aliceblue;
@@ -32,6 +33,8 @@ nav ul li:hover{
 nav ul{
 	list-style-type: none;
 	padding: 0;
+    display: flex
+    gap: 1em;
 }
 nav a:hover{
     color: chocolate;
