--- a/estilos.css
+++ b/estilos.css
@@ -8,7 +8,7 @@ header{
 	background-color: #000000;
 	color: white;
 	text-align: center;
-	padding: 50px;
+	padding: 1em 0;
     width: 100%;
     top: 0;
     z-index: 1000;
