--- a/estilos.css
+++ b/estilos.css
@@ -51,3 +51,21 @@ footer{
 section{
     padding: 5em 0;
 }
+@media (max-width: 768px) {
+    nav ul {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #333;
+    }
+    nav ul li a {
+    padding: 1em;
+    text-align: center;
+    }
+    #nav-toggle {
+    display: block;
+    }
+    .nav-open ul {
+    display: flex;
+    }
+}
