--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,7 @@ body {
 	background-color: #aed6f1;	
 }
 header{
-	background-color: #000000;
+	background-color: darkslateblue;
 	color: white;
 	text-align: center;
 	padding: 1em 0;
